--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -298,7 +298,7 @@ title: daisy
 		<div class="row">
 			<div class="col-sm-7">
 				<div class="adv__monitor">
-					<img src="images/adv.png" alt="">
+					<img src="images/avd.png" alt="">
 				</div>
 			</div>
 			<div class="col-sm-5">
